# SmokeTests

./: CMakeLists.txt  CMakePresets.json  README.adoc
cmake/: riscv.cmake
src/: pipelinechecks.S
